--- a/app/src/main/res/values/sty_app.xml
+++ b/app/src/main/res/values/sty_app.xml
@@ -37,7 +37,8 @@
         <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
 
         <item name="android:navigationBarColor" tools:targetApi="lollipop">?attr/colorPrimary</item>
-        <item name="android:navigationBarDividerColor" tools:targetApi="o_mr1">?attr/clDivider</item>
+        <item name="android:navigationBarDividerColor" tools:targetApi="o_mr1">?attr/clDivider
+        </item>
     </style>
 
     <style name="App.Dark" parent="Theme.AppCompat.NoActionBar">
@@ -74,19 +75,25 @@
         <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">false</item>
 
         <item name="android:navigationBarColor" tools:targetApi="lollipop">?attr/colorPrimary</item>
-        <item name="android:navigationBarDividerColor" tools:targetApi="o_mr1">?attr/clDivider</item>
+        <item name="android:navigationBarDividerColor" tools:targetApi="o_mr1">
+            ?attr/clDivider
+        </item>
     </style>
 
-    <style name="App.Splash" parent="Theme.AppCompat.NoActionBar">
+    <style name="App.Splash" parent="App.Dark.UI">
         <item name="colorPrimaryDark">@color/ic_launcher_background</item>
-
         <item name="android:windowBackground">@drawable/bg_splash</item>
 
-        <item name="android:windowLightStatusBar" tools:targetApi="m">false</item>
-        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">false</item>
+        <item name="android:navigationBarColor" tools:targetApi="lollipop">
+            ?attr/colorPrimaryDark
+        </item>
+        <item name="android:navigationBarDividerColor" tools:targetApi="o_mr1">
+            ?attr/colorPrimaryDark
+        </item>
+    </style>
 
-        <item name="android:navigationBarColor" tools:targetApi="lollipop">?attr/colorPrimaryDark</item>
-        <item name="android:navigationBarDividerColor" tools:targetApi="o_mr1">?attr/colorPrimaryDark</item>
+    <style name="App.Intro" parent="App.Splash">
+        <item name="android:windowBackground">?attr/colorPrimaryDark</item>
     </style>
 
     <style name="Alert.Light" parent="Theme.AppCompat.Light.Dialog.Alert">
