--- a/app/src/main/res/layout/frg_rank.xml
+++ b/app/src/main/res/layout/frg_rank.xml
@@ -30,9 +30,9 @@
             <include
                 layout="@layout/inc_info"
                 android:visibility='@{listEmpty ? v.VISIBLE : v.GONE}'
-                app:details='@{R.string.info_rank_details}'
+                app:details='@{R.string.info_empty_rank_details}'
                 app:icon='@{R.drawable.ic_rank}'
-                app:title='@{R.string.info_rank_title}' />
+                app:title='@{R.string.info_empty_rank_title}' />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/frgRank_rv"
