--- a/app/src/main/res/layout/item_sort.xml
+++ b/app/src/main/res/layout/item_sort.xml
@@ -6,7 +6,7 @@
 
         <import type="sgtmelon.handynotes.R" />
 
-        <import type="sgtmelon.handynotes.office.Help.Col" />
+        <import type="sgtmelon.handynotes.office.Help.Clr" />
 
         <import
             alias="v"
@@ -43,7 +43,7 @@
             android:id="@+id/itemSort_tv_text"
             style="@style/ItemSort.Text"
             android:text='@{itemSort.text}'
-            android:textColor='@{position &lt;= sortEnd ? Col.get(context, R.attr.clAccent) : Col.get(context, R.attr.clSecond)}' />
+            android:textColor='@{position &lt;= sortEnd ? Clr.get(context, R.attr.clAccent) : Clr.get(context, R.attr.clSecond)}' />
 
         <ImageView
             android:id="@+id/itemSort_iv_right"
