--- a/app/src/main/res/drawable/ic_visible_on_anim.xml
+++ b/app/src/main/res/drawable/ic_visible_on_anim.xml
@@ -6,14 +6,14 @@
 
     <target
         android:name="@string/drawable_strike_path"
-        android:animation="@animator/strike_path_on" />
+        android:animation="@animator/visible_strike_path_on" />
 
     <target
         android:name="@string/drawable_strike_mask"
-        android:animation="@animator/strike_mask_on" />
+        android:animation="@animator/visible_strike_mask_on" />
 
     <target
         android:name="@string/drawable_eye_path"
-        android:animation="@animator/eye_path_on" />
+        android:animation="@animator/visible_eye_path_on" />
 
 </animated-vector>
