--- a/app/src/main/res/values/val_app.xml
+++ b/app/src/main/res/values/val_app.xml
@@ -6,9 +6,12 @@
     <integer name="length_max_rank_name">30</integer>
 
     <!-- Drawable part name -->
-    <string name="drawable_group_visible" translatable="false">group_visible</string>
-    <string name="drawable_strike_path" translatable="false">strike_path</string>
-    <string name="drawable_strike_mask" translatable="false">strike_mask</string>
-    <string name="drawable_eye_path" translatable="false">eye_path</string>
+    <string name="drawable_visible_group" translatable="false">group</string>
+    <string name="drawable_visible_strike_path" translatable="false">strike_path</string>
+    <string name="drawable_visible_strike_mask" translatable="false">strike_mask</string>
+    <string name="drawable_visible_eye_path" translatable="false">eye_path</string>
+
+    <string name="drawable_cancel_group" translatable="false">group</string>
+    <string name="drawable_cancel_path" translatable="false">path</string>
 
 </resources>
