--- a/app/src/main/res/layout/act_intro.xml
+++ b/app/src/main/res/layout/act_intro.xml
@@ -4,17 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center"
+    android:orientation="vertical"
     tools:context=".app.view.act.ActIntro">
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/actIntro_vp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginBottom="@dimen/layout_8dp"
         android:layout_weight="1"
-        android:overScrollMode="never"
-        android:layout_marginBottom="@dimen/layout_8dp"/>
+        android:overScrollMode="never" />
 
     <com.rd.PageIndicatorView
         android:layout_width="wrap_content"
@@ -35,7 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/layout_8dp"
-        android:text="Закончить"
+        android:text="@string/info_intro_button"
         android:textColor="?attr/clAccent" />
 
 </LinearLayout>
