--- a/app/src/main/res/drawable/ic_visible_off.xml
+++ b/app/src/main/res/drawable/ic_visible_off.xml
@@ -4,7 +4,7 @@
     android:viewportHeight="24.0"
     android:viewportWidth="24.0">
 
-    <group android:name="@string/drawable_visible_group">
+    <group>
         <clip-path
             android:name="@string/drawable_visible_strike_mask"
             android:pathData="M 0 0 L 24 0 L 24 24 L 0 24 L 0 0 Z M 4.54 1.73 L 3.27 3 L 21 20.73 L 22.27 19.46 Z" />
