--- a/app/src/main/res/layout/item_rank.xml
+++ b/app/src/main/res/layout/item_rank.xml
@@ -29,7 +29,7 @@
             android:padding="@dimen/layout_8dp"
             android:weightSum="1">
 
-            <sgtmelon.handynotes.element.button.BtnVisiblePre
+            <sgtmelon.handynotes.element.button.BtnVisiblePreL
                 android:id="@+id/itemRank_bv_visible"
                 style="@style/ItemRank.Button"
                 android:layout_marginEnd="@dimen/layout_8dp"
@@ -52,24 +52,15 @@
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:id="@+id/itemRank_tv_textCount"
                         style="@style/ItemRank.Info"
                         android:layout_marginEnd="@dimen/layout_4dp"
                         android:layout_marginRight="@dimen/layout_4dp"
                         android:text='@{@string/list_item_rank_text_count + " " + itemRank.getTextCount()}' />
 
                     <TextView
-                        android:id="@+id/itemRank_tv_rollCount"
                         style="@style/ItemRank.Info"
-                        android:layout_marginEnd="@dimen/layout_4dp"
-                        android:layout_marginRight="@dimen/layout_4dp"
                         android:text='@{@string/list_item_rank_roll_count + " " + itemRank.getRollCount()}' />
 
-                    <TextView
-                        android:id="@+id/itemRank_tv_rollDone"
-                        style="@style/ItemRank.Info"
-                        android:text='@{@string/list_item_rank_roll_check + " " + itemRank.getRollCheck() + "%"}'
-                        android:visibility='@{itemRank.getRollCount() == 0 ? v.GONE : v.VISIBLE}' />
 
                 </LinearLayout>
             </LinearLayout>
