--- a/app/src/main/res/values/str_app.xml
+++ b/app/src/main/res/values/str_app.xml
@@ -15,17 +15,24 @@
     <string name="title_act_settings">Settings</string>
 
     <!-- Info for intro and empty pages -->
-    <string name="info_intro_title_1">Title 1</string>
-    <string name="info_intro_title_2">Title 2</string>
-    <string name="info_intro_title_3">Title 3</string>
-    <string name="info_intro_title_4">Title 4</string>
+    <string name="info_intro_title_1">Two types of notes</string>
+    <string name="info_intro_title_2">Colors</string>
+    <string name="info_intro_title_3">Always near at hand!</string>
+    <string name="info_intro_title_4">Categories</string>
+    <string name="info_intro_title_5">Visibility</string>
+    <string name="info_intro_title_6">Settings</string>
+    <string name="info_intro_title_7">Rubbish bin</string>
 
-    <string name="info_intro_details_1">Details details details\nDetails details details 1</string>
-    <string name="info_intro_details_2">Details details details\nDetails details details 2</string>
-    <string name="info_intro_details_3">Details details details\nDetails details details 3</string>
-    <string name="info_intro_details_4">Details details details\nDetails details details 4</string>
+    <string name="info_intro_details_1">You can create text or list</string>
+    <string name="info_intro_details_2">Choose one of 11 colors</string>
+    <string name="info_intro_details_3">Bind your notes in the status bar</string>
+    <string name="info_intro_details_4">Group notes by your categories</string>
+    <string name="info_intro_details_5">Hide categories and notes with them</string>
+    <string name="info_intro_details_6">Sort notes\nSet up saving\nChoose app theme</string>
+    <string name="info_intro_details_7">After deleting notes, they are moved to rubbish bin, where they can be restored or permanently delete</string>
 
-    <string name="info_intro_button">End with this</string>
+    <string name="info_intro_button">Get started</string>
+
 
     <string name="info_empty_rank_title">No categories</string>
     <string name="info_empty_notes_title">No created notes</string>
@@ -33,7 +40,7 @@
 
     <string name="info_empty_rank_details">For add category write name in text field from top</string>
     <string name="info_empty_notes_details">For add new note click on central button of menu</string>
-    <string name="info_empty_bin_details">Hiding notes will not delete from here</string>
+    <string name="info_empty_bin_details"/>
 
 
     <!-- Name of menu items -->
