--- a/app/src/main/res/layout/act_intro.xml
+++ b/app/src/main/res/layout/act_intro.xml
@@ -12,30 +12,36 @@
         android:id="@+id/actIntro_vp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginBottom="@dimen/layout_8dp"
         android:layout_weight="1"
         android:overScrollMode="never" />
 
-    <com.rd.PageIndicatorView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/layout_1dp"
-        android:layout_marginRight="@dimen/layout_1dp"
-        android:padding="@dimen/layout_8dp"
-        app:piv_animationType="worm"
-        app:piv_dynamicCount="true"
-        app:piv_interactiveAnimation="true"
-        app:piv_selectedColor="?attr/clIcon"
-        app:piv_unselectedColor="?attr/clSecond"
-        app:piv_viewPager="@id/actIntro_vp" />
-
-    <Button
-        android:id="@+id/actIntro_b"
-        style="@style/Base.Widget.AppCompat.Button.Borderless"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/layout_8dp"
-        android:text="@string/info_intro_button"
-        android:textColor="?attr/clAccent" />
+        android:layout_height="wrap_content">
 
+        <com.rd.PageIndicatorView
+            android:id="@+id/actIntro_piv_page"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginEnd="@dimen/layout_1dp"
+            android:layout_marginRight="@dimen/layout_1dp"
+            android:padding="@dimen/layout_8dp"
+            app:piv_animationType="worm"
+            app:piv_dynamicCount="true"
+            app:piv_interactiveAnimation="true"
+            app:piv_selectedColor="?attr/clIcon"
+            app:piv_unselectedColor="?attr/clSecond"
+            app:piv_viewPager="@id/actIntro_vp" />
+
+        <Button
+            android:id="@+id/actIntro_b"
+            style="@style/Base.Widget.AppCompat.Button.Borderless"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/layout_8dp"
+            android:text="@string/info_intro_button"
+            android:textColor="?attr/clAccent" />
+
+    </FrameLayout>
 </LinearLayout>
