--- a/app/src/main/res/layout/frg_bin.xml
+++ b/app/src/main/res/layout/frg_bin.xml
@@ -31,7 +31,7 @@
                 layout="@layout/inc_info"
                 android:visibility='@{listEmpty ? v.VISIBLE : v.GONE}'
                 app:details='@{R.string.info_empty_bin_details}'
-                app:icon='@{R.drawable.ic_bin}'
+                app:icon='@{R.mipmap.ic_info_bin}'
                 app:title='@{R.string.info_empty_bin_title}' />
 
             <androidx.recyclerview.widget.RecyclerView
