--- a/app/src/main/res/layout/frg_notes.xml
+++ b/app/src/main/res/layout/frg_notes.xml
@@ -31,7 +31,7 @@
                 layout="@layout/inc_info"
                 android:visibility='@{listEmpty ? v.VISIBLE : v.GONE}'
                 app:details='@{R.string.info_empty_notes_details}'
-                app:icon='@{R.drawable.ic_note}'
+                app:icon='@{R.mipmap.ic_info_notes}'
                 app:title='@{R.string.info_empty_notes_title}' />
 
             <androidx.recyclerview.widget.RecyclerView
