--- a/app/src/main/res/layout/frg_rank.xml
+++ b/app/src/main/res/layout/frg_rank.xml
@@ -31,7 +31,7 @@
                 layout="@layout/inc_info"
                 android:visibility='@{listEmpty ? v.VISIBLE : v.GONE}'
                 app:details='@{R.string.info_empty_rank_details}'
-                app:icon='@{R.drawable.ic_rank}'
+                app:icon='@{R.mipmap.ic_info_rank}'
                 app:title='@{R.string.info_empty_rank_title}' />
 
             <androidx.recyclerview.widget.RecyclerView
