--- a/app/src/main/res/layout/inc_info.xml
+++ b/app/src/main/res/layout/inc_info.xml
@@ -5,14 +5,6 @@
 
         <import type="sgtmelon.handynotes.R" />
 
-        <import
-            alias="text"
-            type="android.text.TextUtils" />
-
-        <import
-            alias="v"
-            type="android.view.View" />
-
         <import type="sgtmelon.handynotes.office.Help.Draw" />
 
         <variable
@@ -45,8 +37,7 @@
 
         <TextView
             style="@style/Info.Details"
-            android:text='@{context.getString(details)}'
-            android:visibility='@{text.isEmpty(context.getString(details)) ? v.GONE : v.VISIBLE}' />
+            android:text='@{context.getString(details)}' />
 
     </LinearLayout>
 
