--- a/app/src/main/res/layout/view_about.xml
+++ b/app/src/main/res/layout/view_about.xml
@@ -85,8 +85,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingBottom="@dimen/layout_8dp">
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
@@ -94,6 +93,7 @@
                 android:gravity="start"
                 android:text="@string/about_app_used_libraries"
                 android:textColor="?attr/clText"
+                android:paddingBottom="@dimen/layout_8dp"
                 android:textSize="@dimen/text_16sp" />
 
             <TextView
@@ -102,6 +102,7 @@
                 android:gravity="start"
                 android:text="@string/about_app_libraries"
                 android:textColor="?attr/clSecond"
+                android:paddingBottom="@dimen/layout_16dp"
                 android:textSize="@dimen/text_14sp" />
 
         </LinearLayout>
