--- a/app/src/main/res/values-ru/str_settings.xml
+++ b/app/src/main/res/values-ru/str_settings.xml
@@ -52,15 +52,17 @@
     </string-array>
 
     <!-- Other -->
-    <string name="pref_header_other">Прочее</string>
+    <string name="pref_header_app">Приложение</string>
 
-    <string name="pref_title_theme">Тема приложения</string>
+    <string name="pref_title_theme">Тема</string>
     <string name="pref_summary_theme">Выбранная тема</string>
 
     <string-array name="pref_text_theme">
         <item>Светлая</item>
         <item>Тёмная</item>
     </string-array>
+
+    <string name="pref_title_rate">Оценить</string>
 
     <string name="pref_title_about">О приложении</string>
 
