--- a/app/src/main/res/values-ru/str_app.xml
+++ b/app/src/main/res/values-ru/str_app.xml
@@ -139,7 +139,7 @@
     <string name="about_app_developer">Разработчик:\nКузнецов Алексей</string>
     <string name="about_app_logo_designer">Дизайнер:\nПолепкина Арина</string>
     <string name="about_app_used_libraries">Используемые библиотеки:</string>
-    <string name="about_app_version">Версия приложения: 1.0</string>
+    <string name="about_app_version">Версия приложения: 1.0.0-beta01</string>
 
 
     <!-- EditText hint -->
