--- a/app/src/main/res/values/sty_item_note.xml
+++ b/app/src/main/res/values/sty_item_note.xml
@@ -6,9 +6,14 @@
     <style name="ItemNote.Click">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">?attr/selectableItemBackground</item>
+    </style>
+
+    <style name="ItemNote.Container">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:orientation">horizontal</item>
         <item name="android:padding">@dimen/layout_8dp</item>
-        <item name="android:background">?attr/selectableItemBackground</item>
     </style>
 
     <style name="ItemNote.Indicator">
