--- a/app/src/main/res/values/sty_app.xml
+++ b/app/src/main/res/values/sty_app.xml
@@ -125,7 +125,7 @@
     <style name="Toolbar">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">?attr/actionBarSize</item>
-        <item name="android:background">?attr/clPrimary</item>
+        <item name="android:background">?attr/colorPrimary</item>
     </style>
 
     <style name="Toolbar.Light">
